// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Decoding Progress: Match Snapshots 1 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ImageProgress
    animating={true}
    background="#FFF"
    primaryColor="#E88C0C"
  />
</View>
`;

exports[`Decoding Progress: Match Snapshots 2 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ImageProgress
    animating={true}
    background="#17212D"
    primaryColor="#E88C0C"
  />
</View>
`;
